fixed dropdown menu, fixed modal close button alignment

--- a/src/styles/NavigationDropdownMenu.css
+++ b/src/styles/NavigationDropdownMenu.css
@@ -1,3 +1,4 @@
 .NavigationDropdownMenu__button {
     cursor: default;
+    overflow: visible !important;
 }
