--- a/src/styles/SaveDialog.css
+++ b/src/styles/SaveDialog.css
@@ -9,3 +9,8 @@
 .modal-body {
     padding-bottom: 0px !important;
 }
+
+.modal-header .close {
+    margin: 0px !important;
+    padding: 0px !important;
+}
